--- a/SportsOrganizer.Server/Shared/AdminLayout.razor
+++ b/SportsOrganizer.Server/Shared/AdminLayout.razor
@@ -126,7 +126,7 @@
                     </BarStart>
                     <BarEnd>
                         <BarItem>
-                            <BarLink To="/Admin/Update-and-Versioning" Target="Target.Blank">
+                            <BarLink To="/Admin/Update-and-Versioning">
                                 <Row>
                                     <Column ColumnSize="ColumnSize.IsAuto" Padding="Padding.Is0.FromEnd">
                                         <BarIcon IconName="IconName.Sync" />
