--- a/SportsOrganizer.Server/Pages/Admin/Index.razor
+++ b/SportsOrganizer.Server/Pages/Admin/Index.razor
@@ -1,3 +1,14 @@
 ﻿@page "/Admin/"
 @inherits IndexBase
 @layout AdminLayout
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
+
+<h1 class="text-center">@Localizer["PageTitle"]</h1>
+<hr />
+<p>@Localizer["p1"]</p>
+<p>@Localizer["p2"]</p>
+<p>@Localizer["p3"]</p>
+<p>@Localizer["p4"]</p>
+<p>@Localizer["p5.1"]&nbsp;<a href="https://github.com/aglasencnik/SportsOrganizer" target="_blank">https://github.com/aglasencnik/SportsOrganizer</a>. @Localizer["p5.2"]</p>
+<p>@Localizer["p6"]</p>
