--- a/SportsOrganizer.Server/Components/AdminComponents/AdminTeamEditModalComponent/AdminTeamEditModal.razor
+++ b/SportsOrganizer.Server/Components/AdminComponents/AdminTeamEditModalComponent/AdminTeamEditModal.razor
@@ -1,1 +1,65 @@
 ﻿@inherits AdminTeamEditModalBase
+
+@if (ModalParameters.EditType == EditType.Add)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["AddTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="Team.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["TeamName"]</Label>
+            <TextEdit @bind-Text="Team.Name" />
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
+else if (ModalParameters.EditType == EditType.Edit)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["EditTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="Team.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["TeamName"]</Label>
+            <TextEdit @bind-Text="Team.Name" />
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Warning" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
+else if (ModalParameters.EditType == EditType.Delete)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["DeleteTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="Team.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["TeamName"]</Label>
+            <TextEdit @bind-Text="Team.Name" Disabled />
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Danger" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
