--- a/SportsOrganizer.Server/Pages/Admin/ThemeSelector.razor.css
+++ b/SportsOrganizer.Server/Pages/Admin/ThemeSelector.razor.css
@@ -1,1 +1,30 @@
-﻿
+﻿.preview {
+    margin-bottom: 4em;
+}
+
+    .preview .image {
+        position: relative;
+    }
+
+        .preview .image img {
+            width: 100%;
+            height: auto;
+        }
+
+    .preview .options {
+        padding: 2em;
+        text-align: center;
+        border-top: 1px solid rgba(0,0,0,.125);
+    }
+
+        .preview .options p {
+            margin-bottom: 2em;
+        }
+
+.bs-component > .btn, .bs-component > .btn-toolbar > .btn-group, .bs-component > .btn-group, .card .btn-group {
+    margin-bottom: 0.25rem;
+}
+
+.btn {
+    padding: 0.5rem 0.9rem;
+}
