--- a/SportsOrganizer.Server/Components/AdminComponents/AdminUserEditModalComponent/AdminUserEditModal.razor
+++ b/SportsOrganizer.Server/Components/AdminComponents/AdminUserEditModalComponent/AdminUserEditModal.razor
@@ -1,1 +1,129 @@
-﻿@inherits AdminUserEditModalBase
+﻿@using SportsOrganizer.Data.Enums;
+@inherits AdminUserEditModalBase
+
+@if (ModalParameters.EditType == EditType.Add)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["AddTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="User.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Username"]</Label>
+            <TextEdit @bind-Text="User.Username" />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Password"]</Label>
+            <TextEdit @bind-Text="User.Password" />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["UserType"]</Label>
+            <Select @bind-SelectedValue="User.UserType">
+                <SelectItem Value="UserType.User">@Localizer["User"]</SelectItem>
+                <SelectItem Value="UserType.Admin">@Localizer["Admin"]</SelectItem>
+            </Select>
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["UserType"]</Label>
+            <Select @bind-SelectedValues="SelectedActivityIds" Multiple MaxVisibleItems="10">
+                @foreach (var activity in Activities)
+                {
+                    var text = Localizer["Activity"];
+                    <SelectItem Value="@activity.Id">@($"{activity.ActivityNumber}. {text}")</SelectItem>
+                }
+            </Select>
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
+else if (ModalParameters.EditType == EditType.Edit)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["EditTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="User.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Username"]</Label>
+            <TextEdit @bind-Text="User.Username" />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Password"]</Label>
+            <TextEdit @bind-Text="User.Password" />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["UserType"]</Label>
+            <Select @bind-SelectedValue="User.UserType">
+                <SelectItem Value="UserType.User">@Localizer["User"]</SelectItem>
+                <SelectItem Value="UserType.Admin">@Localizer["Admin"]</SelectItem>
+            </Select>
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["UserType"]</Label>
+            <Select @bind-SelectedValues="SelectedActivityIds" Multiple MaxVisibleItems="10">
+                @foreach (var activity in Activities)
+                {
+                    var text = Localizer["Activity"];
+                    <SelectItem Value="@activity.Id">@($"{activity.ActivityNumber}. {text}")</SelectItem>
+                }
+            </Select>
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
+else if (ModalParameters.EditType == EditType.Delete)
+{
+    <ModalHeader>
+        <ModalTitle>@Localizer["DeleteTitle"]</ModalTitle>
+        <CloseButton />
+    </ModalHeader>
+    <ModalBody>
+        <div class="form-group">
+            <Label>@Localizer["UniqueIdentifier"]</Label>
+            <NumericPicker @bind-Value="User.Id" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Username"]</Label>
+            <TextEdit @bind-Text="User.Username" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["Password"]</Label>
+            <TextEdit @bind-Text="User.Password" Disabled />
+        </div>
+        <div class="form-group mt-4">
+            <Label>@Localizer["UserType"]</Label>
+            <Select @bind-SelectedValue="User.UserType" Disabled>
+            <SelectItem Value="UserType.User">@Localizer["User"]</SelectItem>
+            <SelectItem Value="UserType.Admin">@Localizer["Admin"]</SelectItem>
+        </Select>
+    </div>
+    <div class="form-group mt-4">
+        <Label>@Localizer["UserType"]</Label>
+        <Select @bind-SelectedValues="SelectedActivityIds" Multiple MaxVisibleItems="10" Disabled>
+                @foreach (var activity in Activities)
+                {
+                    var text = Localizer["Activity"];
+                    <SelectItem Value="@activity.Id">@($"{activity.ActivityNumber}. {text}")</SelectItem>
+                }
+            </Select>
+        </div>
+    </ModalBody>
+    <ModalFooter>
+        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
+    </ModalFooter>
+}
