--- a/SportsOrganizer.Server/Pages/Admin/BackupAndRestore.razor
+++ b/SportsOrganizer.Server/Pages/Admin/BackupAndRestore.razor
@@ -1,3 +1,15 @@
 ﻿@page "/Admin/Backup-and-Restore"
 @inherits BackupAndRestoreBase
 @layout AdminLayout
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
+
+<h1 class="text-center">@Localizer["PageTitle"]</h1>
+<hr />
+<p>@Localizer["p1"]</p>
+<p>@Localizer["p2"]</p>
+<p>@Localizer["p3"]</p>
+<p>@Localizer["p4"]</p>
+<p>@Localizer["p5"]</p>
+<Button Color="Color.Success" Clicked="Backup" Margin="Margin.Is3.FromEnd"><Icon Name="IconName.CloudDownloadAlt" />&nbsp;@Localizer["BtnBackup"]</Button>
+<Button Color="Color.Success" Clicked="Restore"><Icon Name="IconName.CloudUploadAlt" />&nbsp;@Localizer["BtnRestore"]</Button>
